# dotext

./: Cargo.toml
examples/: readdocx.rs
src/: document.rs  docx.rs  lib.rs  odp.rs  ods.rs  odt.rs  pptx.rs  xlsx.rs
