[package]
name = "dotext"
version = "0.1.1"
authors = ["Robin Syihab <r@nosql.asia>"]
description = "Simple Rust library to extract readable text from specific document format like Word Document (docx). Currently only support several format, other format coming soon."
license = "MIT"
repository = "https://github.com/anvie/dotext"

[dependencies]
quick-xml = "0.31.0"
zip = { version = "1.2.1", default-features = false }
